Bug 275219 - Amarok git 2.4.1-252-gfffc1ea crashes when dragging non-collection file from playlist into collection
Summary: Amarok git 2.4.1-252-gfffc1ea crashes when dragging non-collection file from ...
Status: RESOLVED FIXED
Alias: None
Product: amarok
Classification: Applications
Component: Collection Browser (other bugs)
Version First Reported In: 2.4-GIT
Platform: Gentoo Packages Linux
: NOR crash
Target Milestone: 2.4.2
Assignee: Amarok Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-06-08 17:49 UTC by Matěj Laitl
Modified: 2011-06-09 11:27 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 2.4.2
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Matěj Laitl 2011-06-08 17:49:58 UTC
Application: amarok (2.4-GIT)
KDE Platform Version: 4.6.2 (4.6.2)
Qt Version: 4.7.2
Operating System: Linux 3.0.0-rc1-00049-g1fa7b6a x86_64
Distribution (Platform): Gentoo Packages

-- Information about the crash:
- How to reproduce:
1. Add a file that is not in your collection to your playlist
2. Drag that track from playlist into Local Collection

- Actual results:
Amarok crashes

- Expected results:
It would be great if Amarok showed copy here/move here selection if no Shift/Ctrl key was hold durring dropping (Dolphin behaviour) and then present Copy to collection/Move to collection dialog.

This is related to http://commits.kde.org/amarok/fffc1ea983281e6cb1f6ce2129f046e598fe01c4 that enabled drag&drop.

The crash can be reproduced every time.

-- Backtrace:
Application: Amarok (amarok), signal: Segmentation fault
[Current thread is 1 (Thread 0x7f6818157780 (LWP 27195))]

Thread 10 (Thread 0x7f67f97d7700 (LWP 27198)):
#0  0x00007f68149894e3 in __poll (fds=<value optimized out>, nfds=<value optimized out>, timeout=-1) at ../sysdeps/unix/sysv/linux/poll.c:87
#1  0x00007f680c018b0f in poll_func (ufds=0x250b070, nfds=2, timeout=-1, userdata=0x202d310) at pulse/thread-mainloop.c:75
#2  0x00007f680c008916 in pa_mainloop_poll (m=0x202e4c0) at pulse/mainloop.c:879
#3  0x00007f680c009cf9 in pa_mainloop_iterate (m=0x202e4c0, block=<value optimized out>, retval=0x0) at pulse/mainloop.c:961
#4  0x00007f680c009db0 in pa_mainloop_run (m=0x202e4c0, retval=0x0) at pulse/mainloop.c:979
#5  0x00007f680c01890b in thread (userdata=0x202d2d0) at pulse/thread-mainloop.c:94
#6  0x00007f6807d22d68 in internal_thread_func (userdata=0x202d470) at pulsecore/thread-posix.c:83
#7  0x00007f6812b4ac1a in start_thread (arg=<value optimized out>) at pthread_create.c:301
#8  0x00007f681499228d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:115

Thread 9 (Thread 0x7f67f2842700 (LWP 27202)):
#0  0x00007f6812b4e8ce in __pthread_mutex_unlock_usercnt (mutex=0x25e9518, decr=<value optimized out>) at pthread_mutex_unlock.c:52
#1  0x00007f680edd908d in g_main_context_prepare () from /usr/lib64/libglib-2.0.so.0
#2  0x00007f680edd94f8 in ?? () from /usr/lib64/libglib-2.0.so.0
#3  0x00007f680edd9adc in g_main_context_iteration () from /usr/lib64/libglib-2.0.so.0
#4  0x00007f68152eb6b6 in QEventDispatcherGlib::processEvents (this=0x25e8690, flags=<value optimized out>) at kernel/qeventdispatcher_glib.cpp:424
#5  0x00007f68152be222 in QEventLoop::processEvents (this=<value optimized out>, flags=) at kernel/qeventloop.cpp:149
#6  0x00007f68152be60c in QEventLoop::exec (this=0x7f67f2841dc0, flags=) at kernel/qeventloop.cpp:201
#7  0x00007f68151ca4bd in QThread::exec (this=<value optimized out>) at thread/qthread.cpp:492
#8  0x00007f681529e098 in QInotifyFileSystemWatcherEngine::run (this=0x25e6c70) at io/qfilesystemwatcher_inotify.cpp:248
#9  0x00007f68151cd4b5 in QThreadPrivate::start (arg=0x25e6c70) at thread/qthread_unix.cpp:320
#10 0x00007f6812b4ac1a in start_thread (arg=<value optimized out>) at pthread_create.c:301
#11 0x00007f681499228d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:115

Thread 8 (Thread 0x7f67f15b6700 (LWP 27205)):
#0  0x00007f681498b9c3 in select () at ../sysdeps/unix/syscall-template.S:82
#1  0x00007f681529b93d in QProcessManager::run (this=0x7f68155f0f60) at io/qprocess_unix.cpp:245
#2  0x00007f68151cd4b5 in QThreadPrivate::start (arg=0x7f68155f0f60) at thread/qthread_unix.cpp:320
#3  0x00007f6812b4ac1a in start_thread (arg=<value optimized out>) at pthread_create.c:301
#4  0x00007f681499228d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:115

Thread 7 (Thread 0x7f67f0da5700 (LWP 27208)):
#0  pthread_cond_wait () at ../nptl/sysdeps/unix/sysv/linux/x86_64/pthread_cond_wait.S:162
#1  0x00007f6810a374e4 in ?? () from /usr/lib64/qt4/libQtScript.so.4
#2  0x00007f6810a37519 in ?? () from /usr/lib64/qt4/libQtScript.so.4
#3  0x00007f6812b4ac1a in start_thread (arg=<value optimized out>) at pthread_create.c:301
#4  0x00007f681499228d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:115

Thread 6 (Thread 0x7f67e692a700 (LWP 27216)):
#0  pthread_cond_wait () at ../nptl/sysdeps/unix/sysv/linux/x86_64/pthread_cond_wait.S:162
#1  0x00007f68151ce07b in wait (this=<value optimized out>, mutex=0x3828d60, time=18446744073709551615) at thread/qwaitcondition_unix.cpp:88
#2  QWaitCondition::wait (this=<value optimized out>, mutex=0x3828d60, time=18446744073709551615) at thread/qwaitcondition_unix.cpp:160
#3  0x00007f6811ee1c24 in ThreadWeaver::WeaverImpl::blockThreadUntilJobsAreBeingAssigned (this=0x38289e0, th=0x38291f0) at /var/tmp/portage/kde-base/kdelibs-4.6.2-r3/work/kdelibs-4.6.2/threadweaver/Weaver/WeaverImpl.cpp:365
#4  0x00007f6811ee4e2b in ThreadWeaver::WorkingHardState::applyForWork (this=0x372bbe0, th=0x38291f0) at /var/tmp/portage/kde-base/kdelibs-4.6.2-r3/work/kdelibs-4.6.2/threadweaver/Weaver/WorkingHardState.cpp:71
#5  0x00007f6811ee339f in ThreadWeaver::ThreadRunHelper::run (this=0x7f67e6929e10, parent=0x38289e0, th=0x38291f0) at /var/tmp/portage/kde-base/kdelibs-4.6.2-r3/work/kdelibs-4.6.2/threadweaver/Weaver/Thread.cpp:87
#6  0x00007f6811ee38f8 in ThreadWeaver::Thread::run (this=0x38291f0) at /var/tmp/portage/kde-base/kdelibs-4.6.2-r3/work/kdelibs-4.6.2/threadweaver/Weaver/Thread.cpp:142
#7  0x00007f68151cd4b5 in QThreadPrivate::start (arg=0x38291f0) at thread/qthread_unix.cpp:320
#8  0x00007f6812b4ac1a in start_thread (arg=<value optimized out>) at pthread_create.c:301
#9  0x00007f681499228d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:115

Thread 5 (Thread 0x7f67e5f1d700 (LWP 27217)):
#0  pthread_cond_wait () at ../nptl/sysdeps/unix/sysv/linux/x86_64/pthread_cond_wait.S:162
#1  0x00007f68151ce07b in wait (this=<value optimized out>, mutex=0x3828d60, time=18446744073709551615) at thread/qwaitcondition_unix.cpp:88
#2  QWaitCondition::wait (this=<value optimized out>, mutex=0x3828d60, time=18446744073709551615) at thread/qwaitcondition_unix.cpp:160
#3  0x00007f6811ee1c24 in ThreadWeaver::WeaverImpl::blockThreadUntilJobsAreBeingAssigned (this=0x38289e0, th=0x7f67f4007800) at /var/tmp/portage/kde-base/kdelibs-4.6.2-r3/work/kdelibs-4.6.2/threadweaver/Weaver/WeaverImpl.cpp:365
#4  0x00007f6811ee4e2b in ThreadWeaver::WorkingHardState::applyForWork (this=0x372bbe0, th=0x7f67f4007800) at /var/tmp/portage/kde-base/kdelibs-4.6.2-r3/work/kdelibs-4.6.2/threadweaver/Weaver/WorkingHardState.cpp:71
#5  0x00007f6811ee4e44 in ThreadWeaver::WorkingHardState::applyForWork (this=0x372bbe0, th=0x7f67f4007800) at /var/tmp/portage/kde-base/kdelibs-4.6.2-r3/work/kdelibs-4.6.2/threadweaver/Weaver/WorkingHardState.cpp:74
#6  0x00007f6811ee339f in ThreadWeaver::ThreadRunHelper::run (this=0x7f67e5f1ce10, parent=0x38289e0, th=0x7f67f4007800) at /var/tmp/portage/kde-base/kdelibs-4.6.2-r3/work/kdelibs-4.6.2/threadweaver/Weaver/Thread.cpp:87
#7  0x00007f6811ee38f8 in ThreadWeaver::Thread::run (this=0x7f67f4007800) at /var/tmp/portage/kde-base/kdelibs-4.6.2-r3/work/kdelibs-4.6.2/threadweaver/Weaver/Thread.cpp:142
#8  0x00007f68151cd4b5 in QThreadPrivate::start (arg=0x7f67f4007800) at thread/qthread_unix.cpp:320
#9  0x00007f6812b4ac1a in start_thread (arg=<value optimized out>) at pthread_create.c:301
#10 0x00007f681499228d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:115

Thread 4 (Thread 0x7f67e571c700 (LWP 27218)):
#0  pthread_cond_wait () at ../nptl/sysdeps/unix/sysv/linux/x86_64/pthread_cond_wait.S:162
#1  0x00007f68151ce07b in wait (this=<value optimized out>, mutex=0x3828d60, time=18446744073709551615) at thread/qwaitcondition_unix.cpp:88
#2  QWaitCondition::wait (this=<value optimized out>, mutex=0x3828d60, time=18446744073709551615) at thread/qwaitcondition_unix.cpp:160
#3  0x00007f6811ee1c24 in ThreadWeaver::WeaverImpl::blockThreadUntilJobsAreBeingAssigned (this=0x38289e0, th=0x7f67f400c020) at /var/tmp/portage/kde-base/kdelibs-4.6.2-r3/work/kdelibs-4.6.2/threadweaver/Weaver/WeaverImpl.cpp:365
#4  0x00007f6811ee4e2b in ThreadWeaver::WorkingHardState::applyForWork (this=0x372bbe0, th=0x7f67f400c020) at /var/tmp/portage/kde-base/kdelibs-4.6.2-r3/work/kdelibs-4.6.2/threadweaver/Weaver/WorkingHardState.cpp:71
#5  0x00007f6811ee339f in ThreadWeaver::ThreadRunHelper::run (this=0x7f67e571be10, parent=0x38289e0, th=0x7f67f400c020) at /var/tmp/portage/kde-base/kdelibs-4.6.2-r3/work/kdelibs-4.6.2/threadweaver/Weaver/Thread.cpp:87
#6  0x00007f6811ee38f8 in ThreadWeaver::Thread::run (this=0x7f67f400c020) at /var/tmp/portage/kde-base/kdelibs-4.6.2-r3/work/kdelibs-4.6.2/threadweaver/Weaver/Thread.cpp:142
#7  0x00007f68151cd4b5 in QThreadPrivate::start (arg=0x7f67f400c020) at thread/qthread_unix.cpp:320
#8  0x00007f6812b4ac1a in start_thread (arg=<value optimized out>) at pthread_create.c:301
#9  0x00007f681499228d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:115

Thread 3 (Thread 0x7f67e4f1b700 (LWP 27219)):
#0  pthread_cond_wait () at ../nptl/sysdeps/unix/sysv/linux/x86_64/pthread_cond_wait.S:162
#1  0x00007f68151ce07b in wait (this=<value optimized out>, mutex=0x3828d60, time=18446744073709551615) at thread/qwaitcondition_unix.cpp:88
#2  QWaitCondition::wait (this=<value optimized out>, mutex=0x3828d60, time=18446744073709551615) at thread/qwaitcondition_unix.cpp:160
#3  0x00007f6811ee1c24 in ThreadWeaver::WeaverImpl::blockThreadUntilJobsAreBeingAssigned (this=0x38289e0, th=0x7f67e00011e0) at /var/tmp/portage/kde-base/kdelibs-4.6.2-r3/work/kdelibs-4.6.2/threadweaver/Weaver/WeaverImpl.cpp:365
#4  0x00007f6811ee4e2b in ThreadWeaver::WorkingHardState::applyForWork (this=0x372bbe0, th=0x7f67e00011e0) at /var/tmp/portage/kde-base/kdelibs-4.6.2-r3/work/kdelibs-4.6.2/threadweaver/Weaver/WorkingHardState.cpp:71
#5  0x00007f6811ee4e44 in ThreadWeaver::WorkingHardState::applyForWork (this=0x372bbe0, th=0x7f67e00011e0) at /var/tmp/portage/kde-base/kdelibs-4.6.2-r3/work/kdelibs-4.6.2/threadweaver/Weaver/WorkingHardState.cpp:74
#6  0x00007f6811ee339f in ThreadWeaver::ThreadRunHelper::run (this=0x7f67e4f1ae10, parent=0x38289e0, th=0x7f67e00011e0) at /var/tmp/portage/kde-base/kdelibs-4.6.2-r3/work/kdelibs-4.6.2/threadweaver/Weaver/Thread.cpp:87
#7  0x00007f6811ee38f8 in ThreadWeaver::Thread::run (this=0x7f67e00011e0) at /var/tmp/portage/kde-base/kdelibs-4.6.2-r3/work/kdelibs-4.6.2/threadweaver/Weaver/Thread.cpp:142
#8  0x00007f68151cd4b5 in QThreadPrivate::start (arg=0x7f67e00011e0) at thread/qthread_unix.cpp:320
#9  0x00007f6812b4ac1a in start_thread (arg=<value optimized out>) at pthread_create.c:301
#10 0x00007f681499228d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:115

Thread 2 (Thread 0x7f67df593700 (LWP 27220)):
#0  pthread_cond_wait () at ../nptl/sysdeps/unix/sysv/linux/x86_64/pthread_cond_wait.S:162
#1  0x00007f680b61935e in ?? () from /usr/lib64/qt4/libQtWebKit.so.4
#2  0x00007f680b619479 in ?? () from /usr/lib64/qt4/libQtWebKit.so.4
#3  0x00007f6812b4ac1a in start_thread (arg=<value optimized out>) at pthread_create.c:301
#4  0x00007f681499228d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:115

Thread 1 (Thread 0x7f6818157780 (LWP 27195)):
[KCrash Handler]
#6  CollectionTreeItemModel::dropMimeData (this=<value optimized out>, data=<value optimized out>, action=Qt::CopyAction, row=<value optimized out>, column=<value optimized out>, parent=<value optimized out>) at /var/tmp/portage/media-sound/amarok-9999/work/amarok-9999/src/browsers/CollectionTreeItemModel.cpp:147
#7  0x00007f6816273081 in QSortFilterProxyModel::dropMimeData (this=<value optimized out>, data=<value optimized out>, action=Qt::CopyAction, row=<value optimized out>, column=-886161600, parent=<value optimized out>) at itemviews/qsortfilterproxymodel.cpp:1828
#8  0x00007f68161e38ad in QAbstractItemView::dropEvent (this=0x29380d0, event=0x7fffcb2e4cf0) at itemviews/qabstractitemview.cpp:1990
#9  0x00007f6815d0fc9c in QWidget::event (this=0x29380d0, event=0x7fffcb2e4cf0) at kernel/qwidget.cpp:8449
#10 0x00007f68160ba396 in QFrame::event (this=0x29380d0, e=0x7fffcb2e4cf0) at widgets/qframe.cpp:557
#11 0x00007f68161f062b in QAbstractItemView::viewportEvent (this=0x29380d0, event=0x7fffcb2e4cf0) at itemviews/qabstractitemview.cpp:1628
#12 0x00007f6816cd1b6b in CollectionBrowserTreeView::viewportEvent (this=0x29380d0, event=0x7fffcb2e4cf0) at /var/tmp/portage/media-sound/amarok-9999/work/amarok-9999/src/browsers/collectionbrowser/CollectionBrowserTreeView.cpp:112
#13 0x00007f68152bed27 in QCoreApplicationPrivate::sendThroughObjectEventFilters (this=<value optimized out>, receiver=0x2736a90, event=0x7fffcb2e4cf0) at kernel/qcoreapplication.cpp:846
#14 0x00007f6815cb9bcc in QApplicationPrivate::notify_helper (this=0x202ba80, receiver=0x2736a90, e=0x7fffcb2e4cf0) at kernel/qapplication.cpp:4458
#15 0x00007f6815cbf2d2 in QApplication::notify (this=<value optimized out>, receiver=0x2736a90, e=0x7fffcb2e4cf0) at kernel/qapplication.cpp:4266
#16 0x00007f6817b588d6 in KApplication::notify (this=0x7fffcb2e8210, receiver=0x2736a90, event=0x7fffcb2e4cf0) at /var/tmp/portage/kde-base/kdelibs-4.6.2-r3/work/kdelibs-4.6.2/kdeui/kernel/kapplication.cpp:311
#17 0x00007f68152bf4fc in QCoreApplication::notifyInternal (this=0x7fffcb2e8210, receiver=0x2736a90, event=0x7fffcb2e4cf0) at kernel/qcoreapplication.cpp:731
#18 0x00007f6815d4f646 in sendEvent (this=<value optimized out>, xe=<value optimized out>, passive=<value optimized out>) at ../../include/QtCore/../../src/corelib/kernel/qcoreapplication.h:215
#19 QX11Data::xdndHandleDrop (this=<value optimized out>, xe=<value optimized out>, passive=<value optimized out>) at kernel/qdnd_x11.cpp:1183
#20 0x00007f6815d53e02 in QDragManager::drop (this=0x3ad23f0) at kernel/qdnd_x11.cpp:1725
#21 0x00007f6815d53fc8 in QDragManager::eventFilter (this=0x3ad23f0, o=<value optimized out>, e=<value optimized out>) at kernel/qdnd_x11.cpp:1312
#22 0x00007f68152bedeb in QCoreApplicationPrivate::sendThroughApplicationEventFilters (this=0x202ba80, receiver=0x3a133b0, event=0x7fffcb2e56f0) at kernel/qcoreapplication.cpp:827
#23 0x00007f6815cb9b76 in QApplicationPrivate::notify_helper (this=0x0, receiver=0x1, e=0x3c7b398) at kernel/qapplication.cpp:4437
#24 0x00007f6815cbf86e in QApplication::notify (this=0x7fffcb2e8210, receiver=0x3a133b0, e=0x7fffcb2e56f0) at kernel/qapplication.cpp:4023
#25 0x00007f6817b588d6 in KApplication::notify (this=0x7fffcb2e8210, receiver=0x3a133b0, event=0x7fffcb2e56f0) at /var/tmp/portage/kde-base/kdelibs-4.6.2-r3/work/kdelibs-4.6.2/kdeui/kernel/kapplication.cpp:311
#26 0x00007f68152bf4fc in QCoreApplication::notifyInternal (this=0x7fffcb2e8210, receiver=0x3a133b0, event=0x7fffcb2e56f0) at kernel/qcoreapplication.cpp:731
#27 0x00007f6815cbe18e in sendEvent (receiver=0x3a133b0, event=0x7fffcb2e56f0, alienWidget=0x0, nativeWidget=0x3a133b0, buttonDown=<value optimized out>, lastMouseReceiver=<value optimized out>, spontaneous=true) at ../../include/QtCore/../../src/corelib/kernel/qcoreapplication.h:215
#28 QApplicationPrivate::sendMouseEvent (receiver=0x3a133b0, event=0x7fffcb2e56f0, alienWidget=0x0, nativeWidget=0x3a133b0, buttonDown=<value optimized out>, lastMouseReceiver=<value optimized out>, spontaneous=true) at kernel/qapplication.cpp:3122
#29 0x00007f6815d42c8b in QETWidget::translateMouseEvent (this=0x3a133b0, event=<value optimized out>) at kernel/qapplication_x11.cpp:4461
#30 0x00007f6815d4158c in QApplication::x11ProcessEvent (this=<value optimized out>, event=0x7fffcb2e5e70) at kernel/qapplication_x11.cpp:3587
#31 0x00007f6815d6c322 in x11EventSourceDispatch (s=0x2033880, callback=<value optimized out>, user_data=<value optimized out>) at kernel/qguieventdispatcher_glib.cpp:146
#32 0x00007f680edd5262 in g_main_context_dispatch () from /usr/lib64/libglib-2.0.so.0
#33 0x00007f680edd9928 in ?? () from /usr/lib64/libglib-2.0.so.0
#34 0x00007f680edd9adc in g_main_context_iteration () from /usr/lib64/libglib-2.0.so.0
#35 0x00007f68152eb663 in QEventDispatcherGlib::processEvents (this=0x1ec9a10, flags=<value optimized out>) at kernel/qeventdispatcher_glib.cpp:422
#36 0x00007f6815d6bc9e in QGuiEventDispatcherGlib::processEvents (this=0x0, flags=<value optimized out>) at kernel/qguieventdispatcher_glib.cpp:204
#37 0x00007f68152be222 in QEventLoop::processEvents (this=<value optimized out>, flags=) at kernel/qeventloop.cpp:149
#38 0x00007f68152be60c in QEventLoop::exec (this=0x2173900, flags=) at kernel/qeventloop.cpp:201
#39 0x00007f6815d546a9 in QDragManager::drag (this=0x3ad23f0, o=<value optimized out>) at kernel/qdnd_x11.cpp:1981
#40 0x00007f6815ccfcb8 in QDrag::exec (this=0x3b9e4a0, supportedActions=) at kernel/qdrag.cpp:284
#41 0x00007f68161edd86 in QAbstractItemView::startDrag (this=0x2aafea0, supportedActions=<value optimized out>) at itemviews/qabstractitemview.cpp:3448
#42 0x00007f6816203a7b in QListView::startDrag (this=0x2aafea0, supportedActions=) at itemviews/qlistview.cpp:890
#43 0x00007f6816d953ac in Playlist::PrettyListView::startDrag (this=0x2aafea0, supportedActions=) at /var/tmp/portage/media-sound/amarok-9999/work/amarok-9999/src/playlist/view/listview/PrettyListView.cpp:704
#44 0x00007f68161eb7ae in QAbstractItemView::mouseMoveEvent (this=0x2aafea0, event=<value optimized out>) at itemviews/qabstractitemview.cpp:1709
#45 0x00007f6816203de1 in QListView::mouseMoveEvent (this=0x0, e=0x7fffcb2e76d0) at itemviews/qlistview.cpp:778
#46 0x00007f6815d0f92b in QWidget::event (this=0x2aafea0, event=0x7fffcb2e76d0) at kernel/qwidget.cpp:8244
#47 0x00007f68160ba396 in QFrame::event (this=0x2aafea0, e=0x7fffcb2e76d0) at widgets/qframe.cpp:557
#48 0x00007f68161f062b in QAbstractItemView::viewportEvent (this=0x2aafea0, event=0x7fffcb2e76d0) at itemviews/qabstractitemview.cpp:1628
#49 0x00007f68152bed27 in QCoreApplicationPrivate::sendThroughObjectEventFilters (this=<value optimized out>, receiver=0x2aad820, event=0x7fffcb2e76d0) at kernel/qcoreapplication.cpp:846
#50 0x00007f6815cb9bcc in QApplicationPrivate::notify_helper (this=0x202ba80, receiver=0x2aad820, e=0x7fffcb2e76d0) at kernel/qapplication.cpp:4458
#51 0x00007f6815cbf86e in QApplication::notify (this=0x7fffcb2e8210, receiver=0x2aad820, e=0x7fffcb2e76d0) at kernel/qapplication.cpp:4023
#52 0x00007f6817b588d6 in KApplication::notify (this=0x7fffcb2e8210, receiver=0x2aad820, event=0x7fffcb2e76d0) at /var/tmp/portage/kde-base/kdelibs-4.6.2-r3/work/kdelibs-4.6.2/kdeui/kernel/kapplication.cpp:311
#53 0x00007f68152bf4fc in QCoreApplication::notifyInternal (this=0x7fffcb2e8210, receiver=0x2aad820, event=0x7fffcb2e76d0) at kernel/qcoreapplication.cpp:731
#54 0x00007f6815cbe18e in sendEvent (receiver=0x2aad820, event=0x7fffcb2e76d0, alienWidget=0x2aad820, nativeWidget=0x27947d0, buttonDown=<value optimized out>, lastMouseReceiver=<value optimized out>, spontaneous=true) at ../../include/QtCore/../../src/corelib/kernel/qcoreapplication.h:215
#55 QApplicationPrivate::sendMouseEvent (receiver=0x2aad820, event=0x7fffcb2e76d0, alienWidget=0x2aad820, nativeWidget=0x27947d0, buttonDown=<value optimized out>, lastMouseReceiver=<value optimized out>, spontaneous=true) at kernel/qapplication.cpp:3122
#56 0x00007f6815d42c8b in QETWidget::translateMouseEvent (this=0x27947d0, event=<value optimized out>) at kernel/qapplication_x11.cpp:4461
#57 0x00007f6815d4158c in QApplication::x11ProcessEvent (this=<value optimized out>, event=0x7fffcb2e7e50) at kernel/qapplication_x11.cpp:3587
#58 0x00007f6815d6c322 in x11EventSourceDispatch (s=0x2033880, callback=<value optimized out>, user_data=<value optimized out>) at kernel/qguieventdispatcher_glib.cpp:146
#59 0x00007f680edd5262 in g_main_context_dispatch () from /usr/lib64/libglib-2.0.so.0
#60 0x00007f680edd9928 in ?? () from /usr/lib64/libglib-2.0.so.0
#61 0x00007f680edd9adc in g_main_context_iteration () from /usr/lib64/libglib-2.0.so.0
#62 0x00007f68152eb663 in QEventDispatcherGlib::processEvents (this=0x1ec9a10, flags=<value optimized out>) at kernel/qeventdispatcher_glib.cpp:422
#63 0x00007f6815d6bc9e in QGuiEventDispatcherGlib::processEvents (this=0x0, flags=<value optimized out>) at kernel/qguieventdispatcher_glib.cpp:204
#64 0x00007f68152be222 in QEventLoop::processEvents (this=<value optimized out>, flags=) at kernel/qeventloop.cpp:149
#65 0x00007f68152be60c in QEventLoop::exec (this=0x7fffcb2e8170, flags=) at kernel/qeventloop.cpp:201
#66 0x00007f68152c26cb in QCoreApplication::exec () at kernel/qcoreapplication.cpp:1008
#67 0x000000000040d73c in main (argc=<value optimized out>, argv=<value optimized out>) at /var/tmp/portage/media-sound/amarok-9999/work/amarok-9999/src/main.cpp:289

Reported using DrKonqi
Comment 1 Bart Cerneels 2011-06-09 09:47:03 UTC
Git commit d8e57aed35d1b77813fcbc8c65be7f340146a60b by Bart Cerneels.
Committed on 09/06/2011 at 09:45.
Pushed by shanachie into branch 'master'.

Fix crash when trying to d'n'd Metafile::Tracks.

Also added Chanelog that I forgot in the original commit.

BUG:275219

M  +2    -0    ChangeLog     
M  +15   -4    src/browsers/CollectionTreeItemModel.cpp     

http://commits.kde.org/amarok/d8e57aed35d1b77813fcbc8c65be7f340146a60b