Fix crash when trying to d'n'd Metafile::Tracks.

Also added Chanelog that I forgot in the original commit.

BUG:275219